log/build_2024-05-08_21-59-27/my_package/stderr.log
  File "/home/suho/mid/install/my_package/lib/python3.8/site-packages/my_package/my_node.py", line 218
    
    ^
SyntaxError: unexpected EOF while parsing

